apps/media/seerr/config/http-route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr
  labels:
    app.kubernetes.io/name: seerr
    app.kubernetes.io/component: httproute
    app.kubernetes.io/part-of: media-stack
    app.kubernetes.io/managed-by: flux
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network-system
      sectionName: https
  hostnames:
    - seerr.internal.reli.cc
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: seerr
          port: 5055
